maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:3: error: not found: type int
var entier:int = 0 
           ^RandomMouseMaze:6: error: value update is not a member of Int
random3()=entier
^RandomMouseMaze:7: error: type mismatch;
 found   : Unit
 required: Boolean
if (entier=0)
          ^RandomMouseMaze:11: error: type mismatch;
 found   : Unit
 required: Boolean
if (entier=1)
          ^RandomMouseMaze:15: error: type mismatch;
 found   : Unit
 required: Boolean
else if (entier=2)
               ^